# FYP

./: .gitignore  README.md
signature_ws/src/fyp/: CMakeLists.txt  package.xml
signature_ws/src/fyp/config/: controller.yaml  controllers.yaml  effort_controller.yaml  effort_position_controller.yaml  joint_names_009_271120_Correct_components.yaml  position_controller.yaml  ros_controller.yaml  trajectory_controller.yaml  velocity_controller.yaml
signature_ws/src/fyp/data/: PVT_Signature.csv  elastic_constraint_output.csv  impulse_constraint_output.csv  planar_constraint_data_xz.csv  viscoelastic_constraint_output.csv
signature_ws/src/fyp/launch/: display.launch  gazebo.launch  joy.launch  signaturebot.launch  signaturebot_PID.launch  signaturebot_active_constraint.launch  signaturebot_constraint.launch  signaturebot_dynamic_trajectory.launch  signaturebot_effort.launch  signaturebot_effort_measurement.launch  signaturebot_force_position.launch  signaturebot_fp_data.launch  signaturebot_ft.launch  signaturebot_joy.launch  signaturebot_kinematic_trajectory.launch  signaturebot_path.launch  signaturebot_position.launch  signaturebot_trajectory.launch  signaturebot_trajectory_effort.launch  signaturebot_trajectory_position.launch  signaturebot_trajectory_velocity.launch  signaturebot_ws.launch  trajectory.launch
signature_ws/src/fyp/meshes/: link_p_1.STL  link_s_1.STL  link_y_1.STL
signature_ws/src/fyp/rviz_config/: path_odometry.rviz  signaturebot.rviz  simple_pose.rviz  trajectory.rviz  wrench_vis.rviz
signature_ws/src/fyp/src/: active_constraint_demo.py  main.py  (+29 more)
(+215 files in other folders)
