<package format="2">
  <name>fyp</name>
  <version>1.0.0</version>
  <description>
    Dynamic Simulation of 3-DOF Serial Manipulator!
  </description>
  <author>Flynn Marshall</author>
  <maintainer email="fjm1717@ic.ac.uk" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>
